--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mui/material": "^5.15.15",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
