--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "framer-motion": "^11.1.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
