--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "aos": "^2.3.4",
     "framer-motion": "^11.1.1",
     "next": "14.1.4",
     "react": "^18",
@@ -22,6 +23,7 @@
     "swiper": "^11.1.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
