--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "framer-motion": "^11.1.1",
     "next": "14.1.4",
     "react": "^18",
