Handled logic of login page

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_FILES_BASE_URL=http://localhost:8000
 NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:8000/api
+NEXT_PUBLIC_COOKIE_NAME=eqtidar-cookie-session
+NEXT_PUBLIC_COOKIE_SIG=eqtidar-cookie-session.sig
