--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^5.15.15",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "cookie": "^0.6.0",
     "framer-motion": "^11.1.1",
     "next": "14.1.4",
+    "next-client-cookies": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
@@ -25,6 +27,8 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
